manifests/deployment.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: frico
---
kind: Service
apiVersion: v1
metadata:
  name: frico-webhook
  namespace: frico
  labels:
    app: frico
spec:
  selector:
    app: frico
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webhook
  namespace: frico
  name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frico
  template:
    metadata:
      labels:
        app: frico
      name: webhook
    spec:
      serviceAccountName: frico
      containers:
        - name: webhook
          image: ghcr.io/nemcikjan/dizp-mutating-webhook:v20240113-99b5fc9
          imagePullPolicy: IfNotPresent
          args:
            - "--bind=0.0.0.0:443"
            - "--certfile=/certs/tls.crt"
            - "--keyfile=/certs/tls.key"
            - "mutating_admission_controller:admission_controller"
          volumeMounts:
            - readOnly: true
              mountPath: /certs
              name: webhook-certs
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTPS
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 5
      volumes:
        - name: webhook-certs
          secret:
            secretName: frico-webhook-certs
