manifests/mutate.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: frico-mutating-webhook
webhooks:
  - name: frico-webhook.frico.svc
    sideEffects: None
    timeoutSeconds: 30
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: tasks
    objectSelector:
      matchExpressions:
        - key: v2x
          operator: Exists
        - key: frico_skip
          operator: DoesNotExist
    admissionReviewVersions:
      - v1
    rules:
      - operations: ["CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods"]
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZWRENDQXp5Z0F3SUJBZ0lVTEdmbXhPQWxjc1lJbEcxM1RMM3Z6aGVFQ0NBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hURWJNQmtHQTFVRUF3d1NabkpwWTI4dFkyRXRZV1J0YVhOemFXOXVNQjRYRFRJME1ERXhNekUyTXpreApNVm9YRFRNME1ERXhNREUyTXpreE1Wb3dIVEViTUJrR0ExVUVBd3dTWm5KcFkyOHRZMkV0WVdSdGFYTnphVzl1Ck1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBNmJPWEpXcWxuOFh6eng3VjFjNncKaStHMmFZb2xkSXgxYnd2WU0vbmc1UTBXajZnMjdXbmxYRng0OE1kTG11YnhwdEJNZFEyTnI3NkdlYVorcDU4MQptZmk2a2lrM0VS [...]
      service:
        namespace: frico
        name: frico-webhook
        path: /mutate
